feat: create cat list and section show product

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -15,6 +15,19 @@
     text-white
     uppercase;
   }
+  .btn_outline_red {
+    @apply bg-white
+    border-2
+    border-red
+    px-4 py-1
+    rounded-full
+    text-red
+
+    hover:text-white
+    hover:bg-red
+    transition-all
+    uppercase;
+  }
   .main_input{
     @apply  rounded-full p-1 bg-gray drop-shadow-lg pl-4
   }
