--- a/styles/theme.css
+++ b/styles/theme.css
@@ -28,13 +28,13 @@
     transition-all
     uppercase;
   }
-  .main_input{
+  .gray_input{
     @apply  rounded-full p-1 bg-gray drop-shadow-lg pl-4
   }
   .paper_white{
     @apply bg-white p-3 rounded-xl drop-shadow-lg
   }
   .input_outline{
-    @apply bg-white border border-gray rounded-md p-1 px-3
+    @apply bg-white border border-gray rounded-md p-1 px-3 placeholder:text-sm
   }
 }
