--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,12 +6,14 @@
 body {
   font-family: "Montserrat", "Kanit", sans-serif;
   color:black;
+  background-color: #f9fafc;
 }
 
 .my_container{
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 1rem;
+  margin-bottom: 3rem;
 }
 input{
   outline: none;
